--- a/src/input.css
+++ b/src/input.css
@@ -15,20 +15,17 @@ body {
   height: 100%;
 }
 
-.swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+
+.swiper-button-next,.swiper-button-prev {
+  background: #b6bdf9;
+  color: #fff;
+  width: 46px;
+  border-radius: 7px;
 }
 
-.swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+.swiper-button-next:after, .swiper-rtl .swiper-button-prev:after {
+  content: 'next';
+  font-size: 24px;
 }
 
 
