--- a/src/input.css
+++ b/src/input.css
@@ -1,4 +1,5 @@
-@import url("../build/css/fontsRokh.css");
+@import url("css/fonts.css");
+@import url("css/fontsRokh.css");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -6,7 +7,7 @@
 
 
 body {
-  font-family: rokh;
+  font-family: rokh , 'sans-serif';
 }
 
 
