section blogs is added & fix bug in responsive

--- a/src/input.css
+++ b/src/input.css
@@ -1,4 +1,4 @@
-@import url("css/fonts.css");
+/*@import url("css/fonts.css");*/
 @import url("css/fontsRokh.css");
 @tailwind base;
 @tailwind components;
